added new pages

--- a/front/src/pages/WorkTimePage.module.scss
+++ b/front/src/pages/WorkTimePage.module.scss
@@ -1,5 +1,5 @@
 .WorkTimePage {
-    padding: 0 var(--g-spacing-6);
+    padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
 }
 
 .WorkTimePage__header {
