--- a/front/src/pages/EmoloyeePage.module.scss
+++ b/front/src/pages/EmoloyeePage.module.scss
@@ -1,5 +1,5 @@
 .EmoloyeePage {
-    padding: 0 var(--g-spacing-6);
+    padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
 }
 
 .EmoloyeePage__header {
