--- a/front/src/pages/PassengerPage.module.scss
+++ b/front/src/pages/PassengerPage.module.scss
@@ -1,5 +1,5 @@
 .PassengerPage {
-    padding: 0 var(--g-spacing-6);
+    padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
 }
 
 .PassengerPage__header {
