--- a/front/src/pages/RequestInfoPage.module.scss
+++ b/front/src/pages/RequestInfoPage.module.scss
@@ -1,5 +1,5 @@
 .RequestInfoPage {
-    padding: 0 var(--g-spacing-6);
+    padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
 }
 
 .RequestInfoPage__header {
