--- a/front/src/pages/RequestPage.module.scss
+++ b/front/src/pages/RequestPage.module.scss
@@ -1,5 +1,5 @@
 .RequestPage {
-    padding: 0 var(--g-spacing-6);
+    padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
 }
 
 .RequestPage__header {
