--- a/front/src/components/Field/Field.module.scss
+++ b/front/src/components/Field/Field.module.scss
@@ -6,3 +6,12 @@
     max-width: 500px;
     margin-bottom: 15px;
 }
+
+@media (max-width: 500px) {
+    .Field {
+        justify-content: center;
+    }
+    .Field__left {
+        display: none;
+    }
+}
