--- a/front/src/pages/AuthPage.module.scss
+++ b/front/src/pages/AuthPage.module.scss
@@ -3,13 +3,14 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    gap: 10px;
     &__card {
         padding: 20px;
         width: 450px;
         height: 300px;
         display: flex;
         flex-direction: column;
+        justify-content: center;
     }
     &__header {
         text-align: center;
@@ -29,5 +30,21 @@
     }
     &__submit {
         align-self: center;
+    }
+    &__input {
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    .AuthPage {
+        &__card {
+            width: 90%;
+            height: 60%;
+        }
+        &__field {
+            max-width: 300px;
+            min-width: 300px;
+        }
     }
 }
