--- a/front/src/pages/AuthPage.module.scss
+++ b/front/src/pages/AuthPage.module.scss
@@ -25,8 +25,8 @@
     }
     &__field {
         position: relative;
-        max-width: 250px;
-        min-width: 250px;
+        max-width: 100%;
+        min-width: 100%
     }
     &__submit {
         align-self: center;
@@ -39,12 +39,12 @@
 @media (max-width: 500px) {
     .AuthPage {
         &__card {
-            width: 90%;
+            width: 100%;
             height: 60%;
         }
         &__field {
-            max-width: 300px;
-            min-width: 300px;
+            max-width: 100%;
+            min-width: 100%;
         }
     }
 }
