--- a/front/src/components/Suggest/Suggest.module.scss
+++ b/front/src/components/Suggest/Suggest.module.scss
@@ -12,10 +12,8 @@
     position: absolute;
     width: 100%;
     z-index: 1;
-    // opacity: 0;
-    // pointer-events: none;
-    // touch-action: none;
-    // transition: opacity 0.4s ease;
+    max-height: 250px;
+    overflow: scroll;
 }
 
 .SuggestSelect_active {
