--- a/front/src/pages/MainPageMobile.module.scss
+++ b/front/src/pages/MainPageMobile.module.scss
@@ -1,5 +1,5 @@
 .MainPageMobile {
-    padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
+    padding: var(--g-spacing-6) 0 var(--g-spacing-6) var(--g-spacing-6);
     &__list {
         padding: 10px;
     }
