--- a/front/src/pages/EmployeeInfoPage.module.scss
+++ b/front/src/pages/EmployeeInfoPage.module.scss
@@ -1,12 +1,12 @@
-.WorkTimePage {
+.EmployeeInfoPage {
     padding: 0 0 var(--g-spacing-6) var(--g-spacing-6);
 }
 
-.WorkTimePage__header {
+.EmployeeInfoPage__header {
     padding: var(--g-spacing-6) var(--g-spacing-6) var(--g-spacing-6) 0;
 }
 
-.WorkTimePage__actions {
+.EmployeeInfoPage__actions {
     display: flex;
     gap: 16px;
 }
