--- a/front/src/pages/GantPage.module.scss
+++ b/front/src/pages/GantPage.module.scss
@@ -3,7 +3,7 @@
 }
 
 .GantPage__header {
-    padding: var(--g-spacing-6) var(--g-spacing-6) var(--g-spacing-6) 0;
+    padding: 0 var(--g-spacing-6) var(--g-spacing-6) 0;
 }
 
 .appContainer {
@@ -13,7 +13,7 @@
 
 .GanttSidebar {
     width: 250px;
-    margin-top: 38px;
+    margin-top: 48px;
     padding: 20px;
     border-right: 1px solid var(--g-color-private-white-50);
 }
@@ -43,6 +43,7 @@
     justify-content: space-between;
     position: relative;
     padding-bottom: 20px;
+    align-items: center;
 }
 
 .GanttChart__hoursItem {
@@ -86,7 +87,7 @@
 .GanttChart__line {
     min-height: 50px;
     border-bottom: 1px solid var(--g-color-private-white-50);
-    width: 1440px;
+    width: 7440px;
     cursor: pointer;
 }
 
@@ -118,10 +119,12 @@
     gap: 16px;
 }
 
-.GantPage__header {
-    display: block;
+.GantPage__modalHeader {
     margin-bottom: 16px;
     padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .GantPage__submit {
@@ -145,4 +148,14 @@
     &:hover {
         opacity: 0.8;
     }
+}
+
+.GanttChart__hoursMain {
+    font-size: 19px;
+    margin-right: -4px;
+    background: #fff;
+    padding: 5px;
+    z-index: 10;
+    color: #000;
+    border-radius: 4px;
 }
