--- a/front/src/components/TableLoader/TableLoader.module.scss
+++ b/front/src/components/TableLoader/TableLoader.module.scss
@@ -1,16 +1,17 @@
 .TableLoader {
-    width: 100%;
-    padding: 0 24px 0 0;
+    display: flex;
+    flex-direction: column;
+    padding-right: 24px;
     &__row {
         height: 40px;
+        min-width: 100%;
     }
     &__cell {
         padding: 0 !important;
         padding: 11px 8px 10px 8px;
-        min-width: 100px;
     }
     &__skeleton {
-        min-width: 100%;
+        width: 100%;
         min-height: 30px;
     }
 }
