--- a/front/src/pages/WorkTimeList.module.scss
+++ b/front/src/pages/WorkTimeList.module.scss
@@ -10,6 +10,10 @@
     max-width: 500px;
 }
 
+.WorkTimeList__filters {
+    margin-bottom: 16px;
+}
+
 .WorkTimeList__title {
     display: block;
     margin-bottom: 8px;
